# api_crawler

./: Cargo.toml  OUTPUT_COMPARISON.md  README.md  demo_hierarchical_output.json
documentation/: ARCHITECTURE.md  CHANGELOG.md  DUPLICATION_BUG_FIX.md  FORMAT_COMPARISON.md  INDEX.md  PERFORMANCE_IMPROVEMENTS.md  README.md  ROOT_CAUSE_ANALYSIS.md  TREE_ORDERING_SOLUTION.md
examples/: hal_api_test.rs  hierarchical_output.rs  simple_test.rs  tree_output.rs
src/: crawler.rs  error.rs  lib.rs  main.rs  output.rs  types.rs
test/: README.md  demo_hierarchical_output.json  run_format_tests.sh  test_clean_tree_structure.rs  tree_test.json  tree_test2.json  tree_test3.json
